@@ -1,26 +1,19 @@
 buildscript {
     repositories {
-        jcenter()
-        maven {
-            name = "forge"
-            url = "http://files.minecraftforge.net/maven"
-        }
-		maven {
-            name = "sonatype"
-            url = "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
+        maven { url = 'https://maven.minecraftforge.net/' }
+        maven { url = 'https://repo.spongepowered.org/maven' }
+        mavenCentral()
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:5.1.76'
     }
 }
 
-plugins {
-    id 'com.matthewprenger.cursegradle' version '1.1.0'
-	id 'se.bjurr.gitchangelog.git-changelog-gradle-plugin' version '1.56'
-}
-
-apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'idea'
+apply plugin: 'maven-publish'
+apply plugin: 'java'
+apply from: 'https://maven.zeith.org/org/zeith/FixupFML/fix-v1.0.1-usercache.gradle'
 
 ext.configFile = file("build.txt")
 configFile.withReader {
@@ -33,158 +26,301 @@ configFile.withReader {
 }
 
 version = "${config.mod_version}"
-group = "org.zeith.tcrv"
+group = "org.zeith.${config.mod_id}"
 archivesBaseName = "${config.mod_id_fancy}-${config.minecraft_version}"
 
-sourceCompatibility = targetCompatibility = "1.8"
-compileJava {
-    sourceCompatibility = targetCompatibility = "1.8"
-}
+sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
 minecraft {
-    version = "${config.minecraft_version}-${config.forge_version}"
-    runDir = "run"
-    mappings = "${config.mcp}"
-    makeObfSourceJar = false
-    replace '@VERSION@', "${config.mod_version}"
-	replace '@FINGERPRINT@', project.findProperty('signSHA1')
+    mappings channel: 'stable', version: '39-1.12'
+    accessTransformers(
+            file('libraries/tc_at.cfg'), // required for TC to function
+            file('src/main/resources/META-INF/accesstransformer.cfg')
+    )
+
+    runs {
+        client {
+            workingDirectory project.file('run/client')
+
+            jvmArgs([
+                    '-Dfml.coreMods.load=org.zeith.terraria.asm.TerrariaCraftCoremod,com.zeitheron.hammercore.asm.HCASM',
+                    '-Dmixin.checks.interfaces=true',
+                    '-Dmixin.debug.export=true',
+                    "-XX:+UseConcMarkSweepGC",
+                    "-XX:-UseAdaptiveSizePolicy"
+            ])
+
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+            property 'forge.logging.console.level', 'debug'
+            property 'log4j.configurationFile', 'log4j2.xml'
+            args([
+                    "-username",
+                    System.env.MC_USERNAME
+            ])
+        }
+
+        server {
+            workingDirectory project.file('run/server')
+
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+            property 'forge.logging.console.level', 'debug'
+            property 'log4j.configurationFile', 'log4j2.xml'
+        }
+    }
+}
+
+configurations {
+    embed
+    tcImplementation
+    tcModsFolder
+    implementation.extendsFrom(embed)
+    implementation.extendsFrom(tcImplementation)
+    implementation.extendsFrom(tcModsFolder)
 }
 
 repositories {
+    maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
+    mavenCentral()
     maven {
         name = "Zeitheron Maven"
         url = "https://maven.zeith.org"
     }
+    maven {
+        url = "https://jitpack.io"
+    }
+    flatDir { dirs "libraries/${config.minecraft_version}/all" }
+    flatDir { dirs "libraries/${config.minecraft_version}/classpathOnly" }
+    flatDir { dirs "libraries/${config.minecraft_version}/runtimeOnly" }
 }
 
 dependencies {
-    deobfCompile "org.zeith.terraria:TerrariaCraft-${config.minecraft_version}:${config.tc_version}"
-    deobfCompile "org.zeith.ScreenshotWatermark:ScreenshotWatermark-1.12.2:12.1.1"
+    implementation("net.minecraftforge:mergetool:0.2.3.3") { force = true }
+    minecraft "net.minecraftforge:forge:${config.minecraft_version}-${config.forge_version}"
+
+    def deps = new String(Base64.getDecoder().decode(tc_build_data)).replace('\r', '').replace('\n', '').split("[|]")
+    for (final def d in deps) {
+        if (d.endsWith(">")) {
+            d = d.substring(0, d.length() - 1)
+            if (d.endsWith("!")) tcModsFolder d.substring(0, d.length() - 1)
+            else tcModsFolder fg.deobf(d)
+            continue
+        }
+
+        if (d.endsWith("!")) tcImplementation d.substring(0, d.length() - 1)
+        else tcImplementation fg.deobf(d)
+    }
+
+    ////// UTILITY STUFF //////
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    compileOnly 'org.jetbrains:annotations:24.0.1'
+    ///////////////////////////
+
+    def libraries = new File(file("libraries"), "${config.minecraft_version}")
+    if (!libraries.isDirectory()) libraries.mkdirs()
+
+    def libDir = new File(libraries, "all");
+    if (libDir.isDirectory()) {
+        libDir.eachFile { file ->
+            def splitPos = file.name.lastIndexOf("-")
+            def modartifact = file.name.substring(0, splitPos)
+            def modversion = file.name.substring(splitPos + 1, file.name.length() - 4)
+            dependencies {
+                implementation project.dependencies.create("_all:$modartifact:$modversion")
+            }
+        }
+    } else libDir.mkdir();
+
+    libDir = new File(libraries, "classpathOnly");
+    if (libDir.isDirectory()) {
+        libDir.eachFile { file ->
+            def splitPos = file.name.lastIndexOf("-")
+            def modartifact = file.name.substring(0, splitPos)
+            def modversion = file.name.substring(splitPos + 1, file.name.length() - 4)
+            dependencies {
+                compileOnly project.dependencies.create("_classpath:$modartifact:$modversion")
+            }
+        }
+    } else libDir.mkdir();
+
+    libDir = new File(libraries, "runtimeOnly");
+    if (libDir.isDirectory()) {
+        libDir.eachFile { file ->
+            def splitPos = file.name.lastIndexOf("-")
+            def modartifact = file.name.substring(0, splitPos)
+            def modversion = file.name.substring(splitPos + 1, file.name.length() - 4)
+            dependencies {
+                runtimeOnly project.dependencies.create("_runtime:$modartifact:$modversion")
+            }
+        }
+    } else libDir.mkdir();
 }
 
-processResources
-{
-    inputs.property "version", project.version
+def startTasks = gradle.startParameter.taskNames
+def intellijIDE = (System.getProperty("idea.sync.active") == "true" || System.getProperty("idea.active") == "true") && !startTasks.contains("build") && !startTasks.contains("buildAndUploadMod") && !startTasks.contains("publishAllPublicationsToMavenRepository") && !startTasks.contains("publish") && !startTasks.contains("jar")
+
+println "Running IntelliJ IDE: " + intellijIDE
+
+task cleanReplaces(type: Delete) {
+    delete "build/sources/replaced"
+}
+
+def replaceMap = [
+        "required-after:terraria": "required-after:terraria@[${config.tc_version},)",
+        "@VERSION@"              : config.mod_version
+];
+
+if (tasks.contains(build) && !intellijIDE) {
+
+    task applyReplaces(type: Copy) {
+        from('src/main/java')
+        into 'build/sources/replaced'
+
+        filter { line ->
+            for (final def entry in replaceMap.entrySet()) {
+                line = line.replace(entry.key, entry.value)
+            }
+            return line
+        }
+    }
+
+    compileJava.dependsOn applyReplaces
+
+    sourceSets {
+        main {
+            java {
+                srcDirs = ["build/sources/replaced"]
+            }
+        }
+    }
+}
+
+processResources {
+    inputs.property "version", config.mod_version
     inputs.property "mcversion", config.minecraft_version
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
-		include 'pack.mcmeta'
-        expand 'version':project.version, 'mcversion':project.minecraft.version
+        include 'pack.mcmeta'
+        expand 'version': config.mod_version, 'mcversion': config.minecraft_version
+        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     }
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
-		exclude 'pack.mcmeta'
-    }
-	rename "mod_id_at.cfg", "META-INF/${config.mod_id}_at.cfg"
-}
-
-task deobfJar(type: Jar) {
-    from sourceSets.main.output
-    classifier = 'deobf'
-    manifest {
-        attributes 'FMLAT': "${config.mod_id}_at.cfg"
-    }
-}
-
-task srcJar(type: Jar, dependsOn: classes) {
-    from sourceSets.main.allSource
-    classifier = 'sources'
-	manifest {
-        attributes 'FMLAT': "${config.mod_id}_at.cfg"
+        exclude 'pack.mcmeta'
+        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     }
 }
 
 jar {
-	manifest {
-		attributes 'FMLAT': "${config.mod_id}_at.cfg"
-	}
+    from(configurations.embed.collect { it.isDirectory() ? it : zipTree(it) }) {
+        exclude 'LICENSE.txt', 'META-INF/MANIFEST.MF', 'META-INF/maven/**', 'META-INF/*.RSA', 'META-INF/*.SF'
+    }
+
+    manifest {
+        attributes([
+                "FMLAT"                   : "accesstransformer.cfg",
+
+                "Specification-Title"     : config.mod_name,
+                "Specification-Vendor"    : config.author,
+                "Specification-Version"   : "1", // We are version 1 of ourselves
+                "Implementation-Title"    : config.mod_name,
+                "Implementation-Version"  : config.mod_version,
+                "Implementation-Vendor"   : config.author,
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+        ])
+    }
+}
+
+import net.minecraftforge.gradle.common.tasks.SignJar
+import java.nio.file.Files
+
+task signJar(type: SignJar, dependsOn: jar) {
+    onlyIf {
+        System.env.MC_KS_PASS != null
+    }
+    keyStore = System.env.MC_KS_PATH
+    alias = System.env.MC_KS_ALIAS
+    storePass = System.env.MC_KS_PASS
+    keyPass = System.env.MC_KS_PASS
+    inputFile = jar.archiveFile
+    outputFile = jar.archiveFile
+}
+
+jar.finalizedBy('reobfJar')
+publish.dependsOn('reobfJar')
+build.dependsOn signJar
+assemble.finalizedBy('signJar')
+signJar.finalizedBy('cleanReplaces')
+
+task deobfJar(type: Jar) {
+    archiveClassifier = 'deobf'
+    from sourceSets.main.output
+    manifest {
+        attributes([
+                "FMLAT"                   : "accesstransformer.cfg",
+                "Specification-Title"     : config.mod_name,
+                "Specification-Vendor"    : config.author,
+                "Specification-Version"   : "1",
+                "Implementation-Title"    : config.mod_name,
+                "Implementation-Version"  : archiveVersion,
+                "Implementation-Vendor"   : config.author,
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+        ])
+    }
+}
+
+task srcJar(type: Jar, dependsOn: classes) {
+    from sourceSets.main.allJava
+    archiveClassifier = 'sources'
 }
 
 artifacts {
     archives deobfJar
-	archives srcJar
+    archives srcJar
 }
 
-curseforge {
-	apiKey = System.env.CURSEFORGE_API_KEY != null ? System.env.CURSEFORGE_API_KEY : '0'
-	project {
-		id = "${config.cf_project}"
-		changelogType = 'html'
-		changelog = file('changelog.html')
-		releaseType = "${config.release_type}"
-		addGameVersion "${config.minecraft_version}"
-		mainArtifact(jar) {
-		  displayName = "[${config.minecraft_version}] ${config.mod_name} - ${config.mod_version}"
-		}
-		relations {
-            requiredLibrary 'Terraria-Craft'
+tasks.register('copyTerrariaCraftDepsToRuntime') {
+    doLast {
+        def directories = []
+        minecraft.runs.each {
+            def f = new File(it.workingDirectory, "mods")
+            directories.add(f)
+            f.mkdirs()
+            f.listFiles().each {
+                if (it.getName().startsWith("__gradle__"))
+                    it.delete()
+            }
         }
-	}
-}
-
-task signJar(type: SignJar, dependsOn: reobfJar) {
-    onlyIf {
-        System.env.MC_KS_PASS != null
+        configurations.tcModsFolder.files.each {
+            directories.each { File dir ->
+                def runFile = new File(dir, "__gradle__${it.name}")
+                runFile.delete()
+                Files.copy(it.toPath(), runFile.toPath())
+            }
+        }
     }
-    keyStore = System.env.MC_KS_PATH
-    alias = System.env.MC_KS_ALIAS
-    storePass = System.env.MC_KS_PASS
-    keyPass = System.env.MC_KS_PASS
-    inputFile = jar.archivePath
-    outputFile = jar.archivePath
 }
-
-task signDeobfJar(type: SignJar, dependsOn: deobfJar) {
-    onlyIf {
-        System.env.MC_KS_PASS != null
-    }
-    keyStore = System.env.MC_KS_PATH
-    alias = System.env.MC_KS_ALIAS
-    storePass = System.env.MC_KS_PASS
-    keyPass = System.env.MC_KS_PASS
-    inputFile = deobfJar.archivePath
-    outputFile = deobfJar.archivePath
-}
-
-task signSrcJar(type: SignJar, dependsOn: srcJar) {
-    onlyIf {
-        System.env.MC_KS_PASS != null
-    }
-    keyStore = System.env.MC_KS_PATH
-    alias = System.env.MC_KS_ALIAS
-    storePass = System.env.MC_KS_PASS
-    keyPass = System.env.MC_KS_PASS
-    inputFile = srcJar.archivePath
-    outputFile = srcJar.archivePath
-}
-
-task makeChangelog(type: se.bjurr.gitchangelog.plugin.gradle.GitChangelogTask) {
-    file = new File("changelog.html")
-    untaggedName = "Version ${project.version}"
-    fromCommit = "${config.start_git_commit}"
-    toRef =  "HEAD"
-    gitHubIssuePattern = "nonada123";
-    templateContent = """
-{{#tags}}
-<h3><a href="https://github.com/dragon-forge/maven">To get developer builds, consult our maven repository</a></h3>
-<h1>Changes:</h1>
-  <ul>
-    {{#commits}}
-    <li> {{{message}}}</li>
-    {{/commits}}
-  </ul>
-{{/tags}}
-"""
-}
-
-build.dependsOn signJar
-build.dependsOn signDeobfJar
-build.dependsOn signSrcJar
-tasks.build.dependsOn makeChangelog
 
 afterEvaluate {
-	tasks["curseforge${config.cf_project}"].dependsOn.add(signJar)
-	tasks["curseforge${config.cf_project}"].dependsOn.add(signDeobfJar)
-	tasks["curseforge${config.cf_project}"].dependsOn.add(signSrcJar)
-	tasks["curseforge${config.cf_project}"].dependsOn.add(makeChangelog)
+    tasks['downloadAssets'].dependsOn.add('copyTerrariaCraftDepsToRuntime')
+
+    tasks['downloadAssets'].dependsOn.add('fixupForgeJars')
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            groupId = "${config.maven_group}"
+            artifactId = config.mod_id_fancy + "-" + config.minecraft_version
+
+            artifact jar
+            artifact srcJar
+            artifact deobfJar
+        }
+    }
+    repositories {
+        maven {
+            url config.maven_url
+        }
+    }
 }
